ops/k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: regai
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 8000
