ops/k8s/base/service-chroma.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma
  namespace: regai
spec:
  selector:
    app: chroma
  ports:
  - port: 8000
    targetPort: 8000
