ops/k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: regai
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
